--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
     "ext-openssl": "*",
     "ext-pdo": "*",
     "ttek/tk-uni": "~3.4.0",
+    "ttek/tk-map": "~3.0.0",
     "ttek/theme-cube": "~1.2.0",
     "ttek-plg/plg-ldap": "~3.2.0",
     "ttek-plg/mailog": "~1.0.0",
