--- a/composer.json
+++ b/composer.json
@@ -1,61 +1,61 @@
 {
-  "name": "uom/apd",
-  "type": "project",
-  "description": "Anatomic Pathology Database",
-  "keywords": [
-    "tropotek"
-  ],
-  "time": "2020-07-22",
-  "license": "MIT",
-  "minimum-stability": "dev",
-  "authors": [
-    {
-      "name": "Michael Mifsud",
-      "homepage": "http://www.tropotek.com/"
-    }
-  ],
-  "autoload": {
-    "psr-0": {
-      "": "src/"
-    }
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "Tk\\Composer\\SetupEvent::postInstall"
+    "name": "uom/apd",
+    "type": "project",
+    "description": "Anatomic Pathology Database",
+    "keywords":  [
+        "tropotek"
     ],
-    "post-update-cmd": [
-      "Tk\\Composer\\SetupEvent::postUpdate"
-    ]
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "3.0.x-dev"
+    "time": "2022-03-07",
+    "license": "MIT",
+    "minimum-stability": "stable",
+    "authors":  [
+         {
+            "name": "Michael Mifsud",
+            "homepage": "http://www.tropotek.com/"
+        }
+    ],
+    "autoload":  {
+        "psr-0":  {
+            "": "src/"
+        }
+    },
+    "scripts":  {
+        "post-install-cmd":  [
+            "Tk\\Composer\\SetupEvent::postInstall"
+        ],
+        "post-update-cmd":  [
+            "Tk\\Composer\\SetupEvent::postUpdate"
+        ]
+    },
+    "extra":  {
+        "branch-alias":  {
+            "dev-master": "3.0.x-dev"
+        }
+    },
+    "repositories":  [
+         {
+            "type": "vcs",
+            "url": "https://github.com/IMSGlobal/lti-1-3-php-library"
+        }
+    ],
+    "require":  {
+        "php": "^7.3.0",
+        "ext-json": "*",
+        "ext-dom": "*",
+        "ext-openssl": "*",
+        "ext-pdo": "*",
+        "uom/tk-uni": "~3.6.0",
+        "uom/tk-map": "~3.2.0",
+        "uom/theme-cube": "~1.4.0",
+        "uom-plg/plg-ldap": "~3.4.0",
+        "uom-plg/mailog": "~3.0.0",
+        "mpdf/mpdf": "~8.0.0"
+    },
+    "require-dev":  {
+    },
+    "config":  {
+        "allow-plugins":  {
+            "uom/tk-installers": true
+        }
     }
-  },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/IMSGlobal/lti-1-3-php-library"
-    }
-  ],
-  "require": {
-    "php": "^7.3.0",
-    "ext-json": "*",
-    "ext-dom": "*",
-    "ext-openssl": "*",
-    "ext-pdo": "*",
-    "uom/tk-uni": "~3.6.0",
-    "uom/tk-map": "~3.2.0",
-    "uom/theme-cube": "~1.4.0",
-    "uom-plg/plg-ldap": "~3.4.0",
-    "uom-plg/mailog": "~3.0.0",
-    "mpdf/mpdf": "~8.0.0"
-  },
-  "require-dev": {
-  },
-  "config": {
-    "allow-plugins": {
-      "uom/tk-installers": true
-    }
-  }
 }
