--- a/composer.json
+++ b/composer.json
@@ -44,18 +44,18 @@
     "ext-dom": "*",
     "ext-openssl": "*",
     "ext-pdo": "*",
-    "uom/tk-uni": "~3.6.0",
-    "uom/tk-map": "~3.2.0",
-    "uom/theme-cube": "~1.4.0",
-    "uom-plg/plg-ldap": "~3.4.0",
-    "uom-plg/mailog": "~3.0.0",
+    "ttek/tk-uni": "~3.6.0",
+    "ttek/tk-map": "~3.2.0",
+    "ttek/theme-cube": "~1.4.0",
+    "ttek-plg/plg-ldap": "~3.4.0",
+    "ttek-plg/mailog": "~3.0.0",
     "mpdf/mpdf": "~8.0.0"
   },
   "require-dev": {
   },
   "config": {
     "allow-plugins": {
-      "uom/tk-installers": true
+      "ttek/tk-installers": true
     }
   }
 }
