--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "uom/apd",
+  "name": "ttek/apd",
   "type": "project",
   "description": "Anatomic Pathology Database",
   "keywords": [
