--- a/bin/.htaccess
+++ b/bin/.htaccess
@@ -1,4 +1,11 @@
+# Apache < 2.3
+<IfModule !mod_authz_core.c>
+    Order allow,deny
+    Deny from all
+    Satisfy All
+</IfModule>
 
-order allow,deny
-deny from all
-
+# Apache ≥ 2.3
+<IfModule mod_authz_core.c>
+    Require all denied
+</IfModule>
